# podman-kube

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Containerfile  README.md  deployment.yaml  main.py  pyproject.toml  service.yaml
.github/actions/run-linters/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: code-quality.yaml
