[project]
name = "podman-kube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = []

[dependency-groups]
dev = [
    "fastapi>=0.116.1",
    "ruff>=0.12.7",
    "uvicorn>=0.35.0",
    "pyright>=1.1.400",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"] # Включить все правила
ignore = [
    "D203",   # one-blank-line-before-class
    "D212",   # multi-line-summary-first-line
    "D100",   # missing-docstring-in-public-module
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
    "S105",   # hard-coded password (если используете)
]
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "uvicorn"]

[tool.ruff.lint.pylint]
max-args = 7
max-returns = 3
max-statements = 50
max-branches = 12


[tool.pyright]
exclude = [".venv", "**/__pycache__"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
